--- a/client/src/partials/_mixins.scss
+++ b/client/src/partials/_mixins.scss
@@ -66,10 +66,25 @@
 
 //elements mixins
 
-@mixin reset-list {
-    list-style: none;
-    margin: 0;
-    padding: 0;
+@mixin element-body {
+    position: relative;
+    top:-4rem;
+    background-color: $white;
+    box-shadow: 0px 2px 5px rgba(19, 24, 44, 0.1);
+    border-radius: 0.1875rem;
+
+    @include tablet{
+        top:-5.5rem;
+    }
+}
+
+@mixin element-block{
+    padding:$normal-space;
+
+    @include tablet{
+        padding: $normal-space $medium-space;
+
+    }
 }
 
 @mixin button {
@@ -153,17 +168,6 @@
     border:1px solid $support-color-red;
 }
 
-@mixin element-body {
-    position: relative;
-    top:-4rem;
-    background-color: $white;
-    box-shadow: 0px 2px 5px rgba(19, 24, 44, 0.1);
-    border-radius: 0.1875rem;
-
-    @include tablet{
-        top:-5.5rem;
-    }
-}
 
 @mixin tag-in-stock{
     height:1.5rem;
